# rail_object_detection

./: .gitignore  README  stack.xml
rail_object_discovery/: .cproject  .project  .pydevproject  CMakeLists.txt  mainpage.dox  manifest.xml
rail_object_discovery/launch/: object_discovery.launch  object_discovery_real.launch  test_object_discovery_sim.launch
rail_object_discovery/launch/config/: object_discovery_cloud_sources.yaml  object_discovery_cloud_sources_sim.yaml
rail_object_discovery/msg/: NamedPointCloud2.msg
rail_object_discovery/nodes/: update_environment_service.cpp
rail_object_discovery/src/: discover_objects_server.cpp  object_selection.cpp  update_environment_service.cpp
rail_object_discovery/srv/: UpdateEnvironment.srv  discover_objects.srv
rail_pcl_object_segmentation/: .cproject  .project  .pydevproject  CMakeLists.txt  mainpage.dox  manifest.xml
rail_pcl_object_segmentation/include/rail_pcl_object_segmentation/: common.hpp  pcl_measurement.hpp  pcl_segmenter.hpp
rail_pcl_object_segmentation/msg/: DiscoveredPlane.msg  ObjectConstraints.msg
rail_pcl_object_segmentation/src/: ViewSegmentation.cpp  extract_objects.cpp  extract_objects_rgb.cpp  extract_objects_srv.cpp  measure_objects.cpp  measure_objects_rgb.cpp  pcl_measurement.cpp
rail_pcl_object_segmentation/srv/: extract_objects.srv
rail_pcl_object_segmentation/test/: test_all.cpp  test_common.hpp  test_helpers.cpp  test_real.cpp  test_sim.cpp
